# plex-trakt-sync

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.example.yml  pyproject.toml
.github/workflows/: ci.yml
config/: state.db
src/plextrakt/: cli.py  config.py
src/plextrakt/matching/: guid.py  resolver.py
src/plextrakt/obs/: logging.py  metrics.py
src/plextrakt/plex/: listener.py  server.py
src/plextrakt/scrobble/: scrobbler.py
src/plextrakt/state/: db.py
src/plextrakt/sync/: engine.py  report.py
src/plextrakt/trakt/: auth.py  client.py  ratelimit.py
tests/: conftest.py  test_cli.py  test_config.py  test_guid.py  test_listener.py  test_obs.py  test_package.py  test_plex_server.py  test_ratelimit.py  test_resolver.py  test_scrobbler.py  test_state_db.py  test_sync_engine.py  test_trakt_auth.py  test_trakt_client.py
