[project]
name = "plextrakt"
version = "0.1.0"
description = "Single-user Plex <-> Trakt watched-status sync and scrobbler"
requires-python = ">=3.12"
dependencies = [
    "plexapi[alert]>=4.18",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic-settings>=2.4",
    "prometheus-client>=0.20",
    "structlog>=24.1",
]

[project.scripts]
plextrakt = "plextrakt.cli:app"

[dependency-groups]
dev = ["pytest>=8", "respx>=0.21", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plextrakt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
